--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,14 +31,22 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # ✅ Firebase packages for login & DB
+  firebase_core: any    # Required for Firebase.initializeApp
+  firebase_auth: any       # Firebase Authentication
+  cloud_firestore: any     # Firebase Firestore Database
+  google_sign_in: ^6.2.1       # Google login
+  uuid: any
+  intl: any
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  intl: ^0.20.2
+#  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
